; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_res_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-video.c_res_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.saa7134_dev = type { i32, i32 }
%struct.saa7134_fh = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"res: get %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.saa7134_dev*, %struct.saa7134_fh*, i32)* @res_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @res_get(%struct.saa7134_dev* %0, %struct.saa7134_fh* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.saa7134_dev*, align 8
  %6 = alloca %struct.saa7134_fh*, align 8
  %7 = alloca i32, align 4
  store %struct.saa7134_dev* %0, %struct.saa7134_dev** %5, align 8
  store %struct.saa7134_fh* %1, %struct.saa7134_fh** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.saa7134_fh*, %struct.saa7134_fh** %6, align 8
  %9 = getelementptr inbounds %struct.saa7134_fh, %struct.saa7134_fh* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %45

15:                                               ; preds = %3
  %16 = load %struct.saa7134_dev*, %struct.saa7134_dev** %5, align 8
  %17 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %16, i32 0, i32 1
  %18 = call i32 @mutex_lock(i32* %17)
  %19 = load %struct.saa7134_dev*, %struct.saa7134_dev** %5, align 8
  %20 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %7, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %15
  %26 = load %struct.saa7134_dev*, %struct.saa7134_dev** %5, align 8
  %27 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %26, i32 0, i32 1
  %28 = call i32 @mutex_unlock(i32* %27)
  store i32 0, i32* %4, align 4
  br label %45

29:                                               ; preds = %15
  %30 = load i32, i32* %7, align 4
  %31 = load %struct.saa7134_fh*, %struct.saa7134_fh** %6, align 8
  %32 = getelementptr inbounds %struct.saa7134_fh, %struct.saa7134_fh* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = or i32 %33, %30
  store i32 %34, i32* %32, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load %struct.saa7134_dev*, %struct.saa7134_dev** %5, align 8
  %37 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = or i32 %38, %35
  store i32 %39, i32* %37, align 4
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @dprintk(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %40)
  %42 = load %struct.saa7134_dev*, %struct.saa7134_dev** %5, align 8
  %43 = getelementptr inbounds %struct.saa7134_dev, %struct.saa7134_dev* %42, i32 0, i32 1
  %44 = call i32 @mutex_unlock(i32* %43)
  store i32 1, i32* %4, align 4
  br label %45

45:                                               ; preds = %29, %25, %14
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @dprintk(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
